<resources>
    <string name="app_name">BbPl</string>

    <string name="hello_world">Testing user authenticity</string>
    <string name="login">Log In Screen</string>
    <string name="register">Register Screen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_train">Train Activity</string>
    <string name="instruction1">Type .tie5Roanl in the following box.</string>
    <string name="title_activity_my_view_group">My View Group Activity</string>
    <string name="title_activity_test">Test Activity</string>
    <string name="title_activity_test_touch_only">Test Touch Only</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_register_user">Register User</string>
    <string name="title_activity_home">Home</string>
    <string name="noData">Sorry, No Questions on the searched items. \nPlease try something else.</string>
    <string name="title_activity_answers_screen">Answers Screen</string>
    <string name="title_activity_question_body_screen">Question Body Screen</string>
    <string name="title_activity_options_screen">Options Screen</string>
    <string name="title_activity_train_activity_first_screen">Train Activity First Screen</string>
    <string name="title_activity_non_european_country_pick">Country-List Game</string>
    <string name="title_activity_user_validation_different_classifiers">User Validation With Different Classifiers</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_all_users_validation"> Users Validation</string>
    <string name="title_activity_my_lock_screen">Lock Screen Options</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_view_recomended_values">View Recommended Values</string>
    <string name="changeResults">Change Results</string>
    <string name="questionTitle">Question Title</string>
    <string name="questionBody">Question Body</string>
    <string name="answerBody">Answer Body</string>
    <string name="answerDO">Answer date and owner</string>
    <string name="answerDC">Answer date and count</string>
    <string name="owner">Owner</string>
    <string name="back">Back</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="changePasswordButton">Change Password</string>
    <string name="activity_lockMessage">Press Enable button if you want the phone to get locked when a intruder uses it. \n\n Disable lock if you only want guests to be logged out.</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="userName">User Name</string>
    <string name="email">E-mail</string>
    <string name="confirmEmail">Confirm E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="registerLabel">Register Here</string>
    <string name="registerButtonText">Register</string>
    <string name="registerImageDescription">Register Image</string>
    <string name="SOlabel">Stack Overflow</string>
    <string name="CLLabel">Country-List Game</string>
    <string name="viewAnswers">View Answers</string>
    <string name="threshold">Threshold: </string>
    <string name="nrObservations">Number of guest Observation to use: </string>
    <string name="saveTestData">Save Test Data</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="wait">Wait for the predictions</string>
    <string name="findCLGame">Find the NON European Country</string>
    <string name="instruction1CLGame">Please tap the button below.</string>
    <string name="buttonTrainTapCLGame">Tap me 5 times to start</string>

    <string name="testDataLabel">Test Data</string>
    <string name="trainDataLabel">Train Data</string>
    <string name="svmSF">SVM Scroll/Fling</string>
    <string name="svmT">SVM Taps</string>
    <string name="kNN_SF">kNN Scroll/Fling</string>
    <string name="kNN_T">kNN Taps</string>
    <string name="rT_SF">rTrees Scroll/Fling</string>
    <string name="rT_T">rTrees Taps</string>
    <string name="goToValidationScreen">Go To Validation Screen</string>

    <string name="recommendedValues">Recommended values</string>
    <string name="currentRPercentage">Current Recognition Percentage</string>
    <string name="notes_for_recomended_values">
        \nNotes:\n
        \nSmaller average Error, make the system recognise intruders faster.
        \n\nGreater Accuracy, makes the system recognise your interactions better.
    </string>

    <string name="settings_1">Change Password</string>
    <string name="settings_2">Lock Option</string>
    <string name="settings_3">Re-Train System</string>
    <string name="settings_4">View Recommended values</string>
    <string name="settings_5">Delete Test Data</string>
    <string name="settings_6">Delete Train Data</string>
    <string name="settings_7">Evaluation</string>

    <string-array name="europeanCountries">
        <item>Belarus</item>
        <item>Bulgaria</item>
        <item>Czech Republic</item>
        <item>Hungary</item>
        <item>Moldova</item>
        <item>Poland</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Slovakia</item>
        <item>Ukraine</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Faroe Islands (DK)</item>
        <item>Finland</item>
        <item>Greenland (DK)</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Northern Ireland (UK)</item>
        <item>Norway</item>
        <item>Scotland (UK)</item>
        <item>Sweden</item>
        <item>United Kingdom</item>
        <item>Wales (UK)</item>
        <item>Albania</item>
        <item>Andorra</item>
        <item>Bosnia and Herzegovina</item>
        <item>Croatia (Hrvatska)</item>
        <item>Cyprus</item>
        <item>Gibraltar (UK)</item>
        <item>Greece</item>
        <item>Vatican City State</item>
        <item>Italy</item>
        <item>Macedonia</item>
        <item>Malta</item>
        <item>Montenegro</item>
        <item>Portugal</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Turkey</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>France</item>
        <item>Germany</item>
        <item>Liechtenstein</item>
        <item>Luxembourg</item>
        <item>Monaco</item>
        <item>Netherlands</item>
        <item>Switzerland</item>
    </string-array>

    <string-array name="nonEuropeCountries">
        <item>Afghanistan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>Cambodia</item>
        <item>China</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Israel</item>
        <item>Japan</item>
        <item>Kazakhstan</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Lebanon</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mongolia</item>
        <item>Nepal</item>
        <item>North Korea</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palestine</item>
        <item>Philippines</item>
        <item>Qatar</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Korea</item>
        <item>Sri Lanka</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Turkmenistan</item>
        <item>United Arab Emirates</item>
        <item>Uzbekistan</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Botswana</item>
        <item>Burkina Faso</item>
        <item>Cabo Verde</item>
        <item>Cameroon</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Comoros</item>
        <item>Djibouti</item>
        <item>Egypt</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Ethiopia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Ghana</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Kenya</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Mali</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Rwanda</item>
        <item>Sao Tome and Principe</item>
        <item>Senegal</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Sudan</item>
        <item>Swaziland</item>
        <item>Tanzania</item>
        <item>Togo</item>
        <item>Tunisia</item>
        <item>Uganda</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Australia</item>
        <item>Fiji</item>
        <item>Kiribati</item>
        <item>Marshall Islands</item>
        <item>Micronesia</item>
        <item>Nauru</item>
        <item>New Zealand</item>
        <item>Palau</item>
        <item>Papua New Guinea</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>Mexico</item>
        <item>Nicaragua</item>
        <item>Panama</item>
        <item>St. Kitts and Nevis</item>
        <item>St. Lucia</item>
        <item>St. Vincent and The Grenadines</item>
        <item>Trinidad and Tobago</item>
        <item>USA (United States of America)</item>
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Ecuador</item>
        <item>Guyana</item>
        <item>Venezuela</item>
    </string-array>
</resources>
