<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ie.dit.max.behaviouralbiometricphonelock.OptionsScreen">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_changePassword"
          android:title="@string/settings_1"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_lockOption"
          android:title="@string/settings_2"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_trainSystem"
          android:title="@string/settings_3"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_viewRecommendedValues"
          android:title="@string/settings_4"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_deleteTestData"
          android:title="@string/settings_5"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_deleteTrainData"
          android:title="@string/settings_6"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_evaluation"
          android:title="@string/settings_7"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>
