<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionTitle"
        android:id="@+id/questionTitle"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/answerDC"
        android:textColor="#0A134E"
        android:id="@+id/dateAndAnswersCount"
        android:layout_below="@+id/questionTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:id="@+id/questionOwner"
        android:textColor="#0A134E"
        android:layout_below="@+id/dateAndAnswersCount"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>