<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ie.dit.max.foregroundAppStackOverflow.QuestionBodyScreen">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/bg_button"
            android:id="@+id/backHomeScreen"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewAnswers"
            android:background="@drawable/bg_button"
            android:id="@+id/goToAnswers"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/questionBodyScrollViewID"
        android:layout_above="@+id/buttonLayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTitle"
                android:id="@+id/bodyScreenTitle"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bodyScreenTitle"
                android:id="@+id/view3"/>

            <TextView
                android:text="@string/questionBody"
                android:id="@+id/questionBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view3"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/questionBodyOwner"
                android:layout_below="@+id/questionBody"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
