<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ie.dit.max.behaviouralbiometricphonelock.ViewRecomendedValues">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendedValues"
                android:id="@+id/textView"
                android:paddingStart="30dp"
                android:layout_alignParentTop="true"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/view0"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"/>

            <TextView
                android:text="@string/currentRPercentage"
                android:id="@+id/predictions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view0"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_below="@+id/predictions"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/predictions"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:id="@+id/view1"
                android:layout_below="@+id/progressBar"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/displayMinMaxValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/view1"/>

            <TextView
                android:id="@+id/notes"
                android:text="@string/notes_for_recomended_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/displayMinMaxValues"/>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
